Release v2.1.1 (Beta preview): Spring Boot fat-jar startup fix
Fixes the startup crash of protected Spring Boot executable jars (ClassNotFoundException on the guard launcher) plus the related packaging and framework-compatibility defects found while verifying it end to end against a real Spring Boot 3.5 application.

Packaging (fat jar):
- Keep Main-Class as the boot loader and hook the guard in via Start-Class
- Preserve zip directory entries (boot loader classpath roots + Spring classpath*: component scan)
- Preserve BOOT-INF/classpath.idx and layers.idx (were renamed away)
- Write runtime metadata and obfuscated resources under BOOT-INF/classes/
- Do not re-emit nested BOOT-INF/lib classes into the classes root
- Store nested BOOT-INF/lib/*.jar uncompressed (boot loader requirement)
- Report synthesised-class and reference-closure problems instead of silently shipping a jar that references a missing helper

Transforms / runtime:
- Chunk the reflection-gate allow list (single <clinit> exceeded 64 KiB)
- Keep runtime-significant MethodParameters (Spring 6.1+ constructor binding)
- Exempt runtime framework annotations from erasure by package family
- Keep Spring Data repository method names (derived queries)
- Keep JDK callback interface overrides (AbstractMethodError)
- Keep Jackson polymorphic sub-type class names (@JsonSubTypes)
- Serve resolved resources through a real in-memory URL (ResourceBundle)
- Degrade class-body encryption on Spring Boot jars (scan parses class files as resources, so ciphertext breaks bean discovery)

Verified: obfuscate-test (Spring Boot 3.5 fat jar) boots and passes 12/12 self-check patterns.